Switching the position of the Headers.lib functions first two arguments, and renamed the functions

--- a/docs/fr/modules/04) Functions/main/Echo.tex
+++ b/docs/fr/modules/04) Functions/main/Echo.tex
@@ -155,13 +155,13 @@
         \hline
         \textbf{\color{func}BU.Main.Errors.HandleSmallErrors}           & \textbf{\color{path}Errors.lib}\\
         \hline
-        \textbf{\color{func}BU.HeaderError}                               & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Header.Error}                               & \textbf{\color{path}Headers.lib}\\
         \hline
-        \textbf{\color{func}BU.HeaderNewstep}                             & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Header.Newstep}                             & \textbf{\color{path}Headers.lib}\\
         \hline
-        \textbf{\color{func}BU.HeaderSuccess}                             & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Header.Success}                             & \textbf{\color{path}Headers.lib}\\
         \hline
-        \textbf{\color{func}BU.HeaderWarning}                             & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Header.Warning}                             & \textbf{\color{path}Headers.lib}\\
         \hline
         \textbf{\color{func}BU.Main.Status.CheckStatIsInitializing}     & \textbf{\color{path}Status.lib}\\
         \hline
