Renamed many functions and added an aliases file with their old names, which are easier to write, but more confusing about their original files

--- a/docs/fr/modules/04) Functions/main/Echo.tex
+++ b/docs/fr/modules/04) Functions/main/Echo.tex
@@ -149,19 +149,19 @@
         \hline
         \textbf{\color{func}BU.CheckProjectLogStatus}                     & \textbf{\color{path}Checkings.lib}\\
         \hline
-        \textbf{\color{func}BU.DechoHighlightFunction}                    & \textbf{\color{path}Decho.lib}\\
+        \textbf{\color{func}BU.Main.Decho.Decho.Function}                    & \textbf{\color{path}Decho.lib}\\
         \hline
-        \textbf{\color{func}BU.DechoHighlightVar}                         & \textbf{\color{path}Decho.lib}\\
+        \textbf{\color{func}BU.Main.Decho.Decho.Var}                         & \textbf{\color{path}Decho.lib}\\
         \hline
         \textbf{\color{func}BU.Main.Errors.HandleSmallErrors}           & \textbf{\color{path}Errors.lib}\\
         \hline
-        \textbf{\color{func}BU.Header.Error}                               & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Main.Headers.Header.Error}                               & \textbf{\color{path}Headers.lib}\\
         \hline
-        \textbf{\color{func}BU.Header.Newstep}                             & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Main.Headers.Header.Newstep}                             & \textbf{\color{path}Headers.lib}\\
         \hline
-        \textbf{\color{func}BU.Header.Success}                             & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Main.Headers.Header.Success}                             & \textbf{\color{path}Headers.lib}\\
         \hline
-        \textbf{\color{func}BU.Header.Warning}                             & \textbf{\color{path}Headers.lib}\\
+        \textbf{\color{func}BU.Main.Headers.Header.Warning}                             & \textbf{\color{path}Headers.lib}\\
         \hline
         \textbf{\color{func}BU.Main.Status.CheckStatIsInitializing}     & \textbf{\color{path}Status.lib}\\
         \hline
