--- a/docs/fr/modules/04) Functions/main/Errors.tex
+++ b/docs/fr/modules/04) Functions/main/Errors.tex
@@ -158,7 +158,7 @@
 \end{justify}
 
 \begin{justify}
-    Ensuite, elle vérifie quelle valeur a été passée en premier argument, puis affiche la chaîne de caractères passée en deuxième argument selon la valeur du premier (W = warning, donc appel de la fonction \textbf{\color{mauve}BU.EchoWarning}, et E = error, donc appel de la fonction \textbf{\color{mauve}BU.EchoError}).
+    Ensuite, elle vérifie quelle valeur a été passée en premier argument, puis affiche la chaîne de caractères passée en deuxième argument selon la valeur du premier (W = warning, donc appel de la fonction \textbf{\color{mauve}BU.Main.Echo.Warning}, et E = error, donc appel de la fonction \textbf{\color{mauve}BU.Main.Echo.Error}).
 \end{justify}
 
 \begin{justify}
