--- a/docs/fr/modules/04) Functions/main/Headers.tex
+++ b/docs/fr/modules/04) Functions/main/Headers.tex
@@ -140,9 +140,9 @@
         \hline
         \textbf{\color{func}BU.Main.Decho.Decho.Function}    & \textbf{\color{path}Decho.lib}\\
         \hline
-        \textbf{\color{func}BU.EchoMsg}           & \textbf{\color{path}Echo.lib}\\
+        \textbf{\color{func}BU.Main.Echo.Msg}           & \textbf{\color{path}Echo.lib}\\
         \hline
-        \textbf{\color{func}BU.Newline}           & \textbf{\color{path}Echo.lib}\\
+        \textbf{\color{func}BU.Main.Echo.Newline}           & \textbf{\color{path}Echo.lib}\\
         \hline
         \textbf{\color{func}BU.Main.Errors.HandleSmallErrors}   & \textbf{\color{path}Errors.lib}\\
         \hline
