--- a/docs/fr/modules/04) Functions/main/Status.tex
+++ b/docs/fr/modules/04) Functions/main/Status.tex
@@ -321,7 +321,7 @@
 
 
 \begin{justify}
-    Sachant qu'il est désormais sûr d'appeler une fonction du fichier \textbf{\color{path}Echo.lib}, car la valeur de la variable globale de statut \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_ECHO} est fixée à \textbf{true}, un message d'erreur est affiché par le biais de la fonction \textbf{\color{func}BU.EchoError}.
+    Sachant qu'il est désormais sûr d'appeler une fonction du fichier \textbf{\color{path}Echo.lib}, car la valeur de la variable globale de statut \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_ECHO} est fixée à \textbf{true}, un message d'erreur est affiché par le biais de la fonction \textbf{\color{func}BU.Main.Echo.Error}.
 \end{justify}
 
 \setlength{\parskip}{1em}
