--- a/docs/fr/modules/04) Functions/main/Headers.tex
+++ b/docs/fr/modules/04) Functions/main/Headers.tex
@@ -130,11 +130,11 @@
         \hline
         \textbf{Fonction} & \textbf{Fichier de définition}\\
         \hline
-        \textbf{\color{func}BU.IsAlphaNumChar}    & \textbf{\color{path}Checkings.lib}\\
+        \textbf{\color{func}BU.Main.Checkings.IsAlphaNumChar}    & \textbf{\color{path}Checkings.lib}\\
         \hline
-        \textbf{\color{func}BU.IsInt}             & \textbf{\color{path}Checkings.lib}\\
+        \textbf{\color{func}BU.Main.Checkings.IsInt}             & \textbf{\color{path}Checkings.lib}\\
         \hline
-        \textbf{\color{func}BU.IsIntpos}          & \textbf{\color{path}Checkings.lib}\\
+        \textbf{\color{func}BU.Main.Checkings.IsIntpos}          & \textbf{\color{path}Checkings.lib}\\
         \hline
         \textbf{\color{func}BU.Main.Decho.BGColor}              & \textbf{\color{path}Decho.lib}\\
         \hline
