--- a/docs/fr/modules/04) Functions/main/Echo.tex
+++ b/docs/fr/modules/04) Functions/main/Echo.tex
@@ -143,11 +143,11 @@
         \hline
         \textbf{\color{func}BU.Main.Checkings.CheckProjectRelatedFile}  & \textbf{\color{path}Checkings.lib}\\
         \hline
-        \textbf{\color{func}BU.IsInt}                                     & \textbf{\color{path}Checkings.lib}\\
+        \textbf{\color{func}BU.Main.Checkings.IsInt}                                     & \textbf{\color{path}Checkings.lib}\\
         \hline
         \textbf{\color{func}BU.Main.Status.CheckStatIsBackupEchoing}                & \textbf{\color{path}Checkings.lib}\\
         \hline
-        \textbf{\color{func}BU.CheckProjectLogStatus}                     & \textbf{\color{path}Checkings.lib}\\
+        \textbf{\color{func}BU.Main.Status.CheckProjectLogStatus}                     & \textbf{\color{path}Checkings.lib}\\
         \hline
         \textbf{\color{func}BU.Main.Decho.Decho.Function}                    & \textbf{\color{path}Decho.lib}\\
         \hline
@@ -779,10 +779,10 @@
 \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
 \color{sec3}
-\subsubsection{BU.EchoRead}\color{text}
+\subsubsection{BU.Main.Echo.Read}\color{text}
 
 \begin{justify}
-    \textbf{Fonction : \color{func}BU.EchoRead}
+    \textbf{Fonction : \color{func}BU.Main.Echo.Read}
 \end{justify}
 
 % ------------
