--- a/docs/fr/modules/04) Functions/main/Errors.tex
+++ b/docs/fr/modules/04) Functions/main/Errors.tex
@@ -144,7 +144,7 @@
 
         \item \textbf{\color{orange}p\_cpls} Ce paramètre attend la chaîne de caractère \textbf{CPLS}, pour changer la valeur de la variable globale de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO}.\\
 
-        \item \textbf{Note : CPLS} sont les initiales de la fonction \textbf{\color{mauve}BU.CheckProjectLogStatus}, qui vérifie si et comment un message peut être redirigé vers un fichier de logs, et où un rappel d'une fonction \textbf{\color{mauve}BU.Echo<...>} avec la valeur de la variable globale de statut mentionnée ci-dessus à \textbf{false} provoquerait une boucle infinie.
+        \item \textbf{Note : CPLS} sont les initiales de la fonction \textbf{\color{mauve}BU.Main.Status.CheckProjectLogStatus}, qui vérifie si et comment un message peut être redirigé vers un fichier de logs, et où un rappel d'une fonction \textbf{\color{mauve}BU.Echo<...>} avec la valeur de la variable globale de statut mentionnée ci-dessus à \textbf{false} provoquerait une boucle infinie.
     \end{itemize}
 \end{justify}
 
