Renaming more functions and correcting some problems which occured during the mass renaming

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -313,12 +313,12 @@ Copiez-collez simplement l'une de ces fonctions, et remplacez y le nom de la cou
 
 \begin{justify}
 	Copiez simplement l'une des fonctions, puis renommez la \textbf{\color{mauve}Header<\$nom\_de\_la\_couleur\_en\_anglais>},
-et modifiez les noms des premier et troisième arguments de la fonction \textbf{\color{mauve}BU.HeaderBase}, en les
+et modifiez les noms des premier et troisième arguments de la fonction \textbf{\color{mauve}BU.Main.Headers.HeaderBase}, en les
 remplaçant par le nom de la variable globale de noms de couleurs souhaitée.
 \end{justify}
 
 \begin{justify}
-	Rendez vous ensuite dans la sous-section suivante, nommée \textbf{BICOLOR HEADERS}, puis pour chaque liste de fonction par couleur, copiez-collez une fonction, puis renomez la en ne changeant que le nom de la deuxième couleur, puis le nom du troisième argument de la fonction \textbf{\color{mauve}BU.HeaderBase}.
+	Rendez vous ensuite dans la sous-section suivante, nommée \textbf{BICOLOR HEADERS}, puis pour chaque liste de fonction par couleur, copiez-collez une fonction, puis renomez la en ne changeant que le nom de la deuxième couleur, puis le nom du troisième argument de la fonction \textbf{\color{mauve}BU.Main.Headers.HeaderBase}.
 \end{justify}
 
 \begin{justify}
