--- a/docs/fr/modules/04) Functions/main/Headers.tex
+++ b/docs/fr/modules/04) Functions/main/Headers.tex
@@ -393,9 +393,9 @@
 \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
 
 \color{sec3}
-\subsubsection{BU.HeaderBase}\color{text}
+\subsubsection{BU.Main.Headers.HeaderBase}\color{text}
 
-\textbf{Fonction : \color{func}BU.HeaderBase}\\
+\textbf{Fonction : \color{func}BU.Main.Headers.HeaderBase}\\
 
 \par\noindent\rule{\textwidth}{0.4pt}
 
@@ -460,7 +460,7 @@
 
 
 \begin{justify}
-    Dans un soucis de temps de pause cohérent, la fonction \textbf{\color{func}BU.HeaderBase} change la valeur des variables globales de statut \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TIME\_NEWLINE} et \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TIME\_TXT}, mettant ainsi le temps de pause du script de ces variable à 0 secondes.\par
+    Dans un soucis de temps de pause cohérent, la fonction \textbf{\color{func}BU.Main.Headers.HeaderBase} change la valeur des variables globales de statut \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TIME\_NEWLINE} et \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_TIME\_TXT}, mettant ainsi le temps de pause du script de ces variable à 0 secondes.\par
 \end{justify}
 
 \begin{justify}
@@ -592,7 +592,7 @@
 
 \begin{justify}
     \textbf{Description :}
-    Chacune de ces fonctions appelle la fonction \textbf{\color{func}BU.HeaderBase}, en lui passant ses trois premiers arguments prédéfinis.
+    Chacune de ces fonctions appelle la fonction \textbf{\color{func}BU.Main.Headers.HeaderBase}, en lui passant ses trois premiers arguments prédéfinis.
 \end{justify}
 
 \par\noindent\rule{\textwidth}{0.4pt}
@@ -617,7 +617,7 @@
 
 \begin{justify}
     \textbf{Fonctionnement :}\\[1\baselineskip]
-    Chacune des fonctions de cette catégorie appelle la fonction \textbf{\color{func}BU.HeaderBase}, en lui passant en premier et troisième arguments une même substitution de commande (\textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR...}), puis un caractère défini par la variable \textbf{\color{vars}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE} en deuxième argument.
+    Chacune des fonctions de cette catégorie appelle la fonction \textbf{\color{func}BU.Main.Headers.HeaderBase}, en lui passant en premier et troisième arguments une même substitution de commande (\textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR...}), puis un caractère défini par la variable \textbf{\color{vars}\$\_\_BU\_MAIN\_TXT\_CHAR\_HEADER\_LINE} en deuxième argument.
 \end{justify}
 
 \begin{justify}
@@ -700,7 +700,7 @@
 \end{justify}
 
 \begin{justify}
-    Il faudra donc se contenter d'appeler la fonction \textbf{\color{func}BU.HeaderBase}, suivie de ses 4 arguments, dont chaque valeur sera différente des autres.
+    Il faudra donc se contenter d'appeler la fonction \textbf{\color{func}BU.Main.Headers.HeaderBase}, suivie de ses 4 arguments, dont chaque valeur sera différente des autres.
 \end{justify}
 
 \end{document}
