--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -230,7 +230,7 @@
     Une fois le code couleur ajouté, repérez, dans le même fichier, la section :
 
     \begin{itemize}
-        \item \textbf{ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "BU.Main.Decho.SetTextColor" FUNCTIONS}
+        \item \textbf{ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "BU.Main.Colors.SetTextColor" FUNCTIONS}
     \end{itemize}
 \end{justify}
 
@@ -244,11 +244,11 @@
 
 
 \begin{justify}
-    Puis créez une nouvelle variable globale de nom de couleur nommée comme la variable créée précédement, sans le \textbf{\color{orange}\_CODE}, puis appelez la fonction \textbf{\color{mauve}BU.Main.Decho.SetTextColor}, suivie du nom de la variable créée dans la sous-section \textbf{COLOR CODES FOR TEXT ENCODING}.
+    Puis créez une nouvelle variable globale de nom de couleur nommée comme la variable créée précédement, sans le \textbf{\color{orange}\_CODE}, puis appelez la fonction \textbf{\color{mauve}BU.Main.Colors.SetTextColor}, suivie du nom de la variable créée dans la sous-section \textbf{COLOR CODES FOR TEXT ENCODING}.
 \end{justify}
 
 \begin{justify}
-    Regardez la manière dont la fonction \textbf{\color{mauve}BU.Main.Decho.SetTextColor} est appelée, pour vous aider.\\[1\baselineskip]
+    Regardez la manière dont la fonction \textbf{\color{mauve}BU.Main.Colors.SetTextColor} est appelée, pour vous aider.\\[1\baselineskip]
 \end{justify}
 
 \begin{justify}
