Adding data in the 'lang.csv' file

--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -257,13 +257,36 @@ __BU_MAIN_ERRORS_LIB__MSG__,This variable stores the message that,,,,,
 ,,,,,,
 __BU_MAIN_FILES_LIB__MSG__,This variable stores the message that,,,,,
 ,,,,,,
-__BU_MAIN_FILESYSTEM_LIB__MSG__,This variable stores the message that,,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__GetFSDevice__UNABLE_TO_GET_FS_DRIVE,This variable stores the message that indicates that the program is unable to get the target file system's path,Warning : unable to get the target (%s) file system's device,Avertissement : impossible d'obtenir ... du système de fichiers cible (%s),,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__GetFSTotalSize__UNABLE_TO_GET_FS_TOTAL_SIZE,This variable stores the message that indicates that the program is unable to get the target file system's total size,Warning : unable to get the target (%s) file system's total size in bytes,Avertissement : impossible d'obtenir la taille totale en octets du système de fichiers cible (%s),,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__GetFSMountPoint__UNABLE_TO_GET_FS_MOUNT_POINT,This variable stores the message that indicates that the program is unable to get the target file system's mount point,Warning : unable to get the target (%s) file system's mount point,Avertissement : impossible d'obtenir le point de montage du système de fichiers cible (%s),,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__GetFSUsedSizeBytes__UNABLE_TO_GET_FS_USED_SIZE_BYTES,This variable stores the message that indicates that the program is unable to get the target file system's used size in bytes,Warning : unable to get the target (%s) file system's used size in bytes,Avertissement : impossible d'obtenir la taille en octets utilisée sur le système de fichiers cible (%s),,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__GetFSUsedSizePercent__UNABLE_TO_GET_FS_USED_SIZE_PERCENT,This variable stores the message that indicates that the program is unable to get the target file system's used size in percentage,Warning : unable to get the target (%s) file system's used size percentage,Avertissement : impossible d'obtenir le pourcentage d'utilisation du système de fichiers cible (%s),,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__GetFSAvailableSize__UNABLE_TO_GET_FS_AVAILABLE_SIZE,This variable stores the message that indicates that the program is unable to get the target file system's available size,Warning : unable to get the target (%s) file system's available size in bytes,Avertissement : impossible d'obtenir la taille en octets disponible sur le système de fichiers cible (%s),,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__GetFSType__UNABLE_TO_GET_FS_TYPE,This variable stores the message that indicates that the program is unable to get the target file system's type,Warning : unable to get the target (%s) file system's type,Avertissement : impossible d'obtenir le type du système de fichiers cible (%s),,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__CHANGING_FOLDER_OWNERSHIP_RIGHTS_MSG,This variable stores the message that,Changing the ownership rights of the %s folder from %s to %.,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__SUCCESSFULLY_CHANGED_FOLDER_REC_OWNERSHIP_RIGHTS_MSG,This variable stores the message that,The rights of the %s folder have been successfully changed from %s to %s,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__UNABLE_TO_CHANGE_FOLDER_REC_OWNERSHIP_RIGHTS,This variable stores the message that,Unable to change the rights of the %s folder,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__SUCCESSFULLY_CHANGED_FOLDER_OWNERSHIP_RIGHTS_MSG,This variable stores the message that,The rights of the %s folder have been successfully changed from %s to %s,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__UNABLE_TO_CHANGE_FOLDER_OWNERSHIP_RIGHTS,This variable stores the message that,UNABLE TO CHANGE THE RIGHTS OF THE %s FOLDER,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__UNABLE_TO_CHANGE_FOLDER_OWNERSHIP_RIGHTS_ADV,This variable stores the message that,Please run the script with the command %s to check what happened,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__UNSUPPORTED_4TH_ARG,This variable stores the message that,THE %s'S FUNCTION %s OPTION PASSED AS 4TH ARGUMENT IS NOT SUPPORTED,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__UNSUPPORTED_4TH_ARG_ADV,This variable stores the message that,The supported options for directory processing are :,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__CHANGING_FILE_OWNERSHIP_RIGHTS_MSG,This variable stores the message that,Changing the ownership rights of the %s file from %s to %s.,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__SUCCESSFULLY_CHANGED_FILE_OWNERSHIP_RIGHTS_MSG,This variable stores the message that,The rights of the %s file have been successfully changed from %s to %s.,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__UNABLE_TO_CHANGE_FILE_OWNERSHIP_RIGHTS,This variable stores the message that,Unable to change the rights of the %s file !,,,,
+__BU_MAIN_FILESYSTEM_LIB__MSG__Chown__FILE_DOES_NOT_EXISTS,This variable stores the message that indicates that the targeted file to change ownership rights doesn't exists,THE %s FILE DOESN'T EXISTS,,,,
 ,,,,,,
-__BU_MAIN_HEADERS_LIB__MSG__,This variable stores the message that,,,,,
+__BU_MAIN_HEADERS_LIB__MSG__DrawLine__NOT_AN_INT,This variable stores the message that,Warning : The value passed for the %s parameter is not an integer,,,,
+__BU_MAIN_HEADERS_LIB__MSG__HeaderBase__VALS_NOT_IN_ASC_ORDER,This variable stores the message that,"Warning : the values were not arranged in ascending order, like 123, 12, 13 or 23",,,,
+__BU_MAIN_HEADERS_LIB__MSG__HeaderBase__bgColorPos_BAD_INT,This variable stores the message that,"Warning : the value passed for the %s parameter is a bad integer (1, 2 AND / OR 3 are supported)",,,,
+__BU_MAIN_HEADERS_LIB__MSG__HeaderBase__bgColorPos_TOO_BIG,This variable stores the message that,Warning : the length of the value passed as %s argument is too big,,,,
+__BU_MAIN_HEADERS_LIB__MSG__HeaderBase__bgColorPos_NULL,This variable stores the message that,Warning : the length of the value passed as %s argument is null,,,,
+__BU_MAIN_HEADERS_LIB__MSG__HeaderBase__bgColorPos_NOT_POS_INT,This variable stores the message that,"Warning : the value passed for the $(BU.Main.Decho.Decho.HighlightVar ""p_bgColorPos"") parameter is not a positive integer",,,,
 ,,,,,,
-__BU_MAIN_OS_LIB__MSG__,This variable stores the message that,,,,,
+__BU_MAIN_OS_LIB__MSG__,"This variable stores the message that warns the user that the ""/proc/version"" file cannot be read",Unable to find or to read the %s file,,,,
 ,,,,,,
-__BU_MAIN_POSIXTERM_LIB__MSG__GetLinuxDistro__PROC_FILE_UNREADABLE,"This variable stores the message that warns the user that the ""/proc/version"" file cannot be read",Unable to find or to read the %s file,Impossible de trouver ou de lire le fichier %s,,,
+__BU_MAIN_POSIXTERM_LIB__MSG__GetLinuxDistro__PROC_FILE_UNREADABLE,This variable stores the message that,,Impossible de trouver ou de lire le fichier %s,,,
 ,,,,,,
 __BU_MAIN_STATUS_LIB__MSG__ConfEcho__VAR_CHK_ERR_OCC_INF,This variable stores the message that warns that an error has occurred while checking the value of a global status variable,AN ERROR OCCURED DURING THIS STATUS VARIABLE CHECKING --> %s    |    VALUE : %s !!!,,,,
 __BU_MAIN_STATUS_LIB__MSG__ConfEcho__VAR_CHK_ERR_OCC,This variable stores the message that warns that an error has occurred while checking the value of a global status variable,AN ERROR OCCURED DURING A STATUS VARIABLE CHECKING !!!,,,,
