Big save : translation of the variables descriptions in the main module's configuration files

--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -313,28 +313,28 @@ __BU_MAIN_TEXT_LIB__MSG__DeleteLettersInString__1ST_ARG_MISSING,"This variable s
 __BU_MAIN_TEXT_LIB__MSG__GetSubStringBeforeDelim__3RD_ARG_MUST_BE_INT,"This variable stores the message that warns that the third argument of the ""GetSubStringBeforeDelim()"" function's value must be an integer",%s --> Warning : this function's third argument must be an integer,%s --> Attention : le troisième argument de cette fonction doit être un nombre entier,
 ,,,,
 __BU_MAIN_TEXT_FORMAT_LIB__MSG__,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__AQUA,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLACK,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLUE,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__CYAN,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__FUCHSIA,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__GRAY,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__GREEN,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__LIME,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__MAROON,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__NAVY,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__OLIVE,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__ORANGE,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__PINK,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__PURPLE,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__RED,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__SALMON,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__SILVER,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__TAN,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__TEAL,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__TURQUOISE,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__VIOLET,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__WHITE,This variable stores the message that,,,
-__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__YELLOW,This variable stores the message that,,,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__AQUA,This variable stores the message that,Aqua,Aquatique,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLACK,This variable stores the message that,Black,Noir,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__BLUE,This variable stores the message that,Blue,Bleu,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__CYAN,This variable stores the message that,Cyan,Cyan,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__FUCHSIA,This variable stores the message that,Fuchsia,Fuchsia,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__GRAY,This variable stores the message that,Gray,Gris,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__GREEN,This variable stores the message that,Green,Vert,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__LIME,This variable stores the message that,Lime,Citron vert,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__MAROON,This variable stores the message that,Maroon,Marron,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__NAVY,This variable stores the message that,Navy,Bleu marine,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__OLIVE,This variable stores the message that,Olive,Olive,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__ORANGE,This variable stores the message that,Orange,Orange,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__PINK,This variable stores the message that,Pink,Rose,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__PURPLE,This variable stores the message that,Purple,Violet,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__RED,This variable stores the message that,Red,Rouge,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__SALMON,This variable stores the message that,Salmon,Saumon,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__SILVER,This variable stores the message that,Silver,Argent,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__TAN,This variable stores the message that,Tan,,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__TEAL,This variable stores the message that,Teal,,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__TURQUOISE,This variable stores the message that,Turquoise,Turquoise,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__VIOLET,This variable stores the message that,Violet,,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__WHITE,This variable stores the message that,White,Blanc,
+__BU_MAIN_TEXT_FORMAT_LIB__MSG__LOCALIZED_COLOR__YELLOW,This variable stores the message that,Yellow,Jaune,
 ,,,,
 __BU_MAIN_TIME_LIB__MSG__,This variable stores the message that,,,
